# Collective-learning

./: README
controllers/: CMakeLists.txt
controllers/footbot_areacleaning/: CMakeLists.txt  footbot_areacleaning.cpp  footbot_areacleaning.h
controllers/footbot_diffusion/: CMakeLists.txt
controllers/footbot_featureselection/: CMakeLists.txt  footbot_featureselection.cpp  footbot_featureselection.h  nr3.h  svd.h
controllers/footbot_foraging/: CMakeLists.txt  footbot_foraging.h
experiments/: area_cleaning.argos  featureSelection.argos  flocking.argos  foraging.argos  synchronization.argos  test.argos
loop_functions/: CMakeLists.txt
loop_functions/area_cleaning_loop_functions/: CMakeLists.txt  area_cleaning_loop_functions.cpp  area_cleaning_loop_functions.h  area_cleaning_qt_user_functions.cpp  area_cleaning_qt_user_functions.h
loop_functions/feature_selection_loop_functions/: CMakeLists.txt  feature_selection_loop_functions.cpp  feature_selection_loop_functions.h  feature_selection_qt_user_functions.cpp  feature_selection_qt_user_functions.h
loop_functions/foraging_loop_functions/: foraging_loop_functions.cpp
matlab/: ECDatabehandling.m  databehandling.m
matlab/data/10/: epsilon10greedyfb0.txt  epsilon10greedyfb1.txt  epsilon10greedyfb10.txt  epsilon10greedyfb11.txt  epsilon10greedyfb12.txt  epsilon10greedyfb13.txt  epsilon10greedyfb14.txt  epsilon10greedyfb15.txt  epsilon10greedyfb16.txt  epsilon10greedyfb17.txt  epsilon10greedyfb18.txt  epsilon10greedyfb19.txt  epsilon10greedyfb2.txt  epsilon10greedyfb20.txt  epsilon10greedyfb21.txt  epsilon10greedyfb22.txt  epsilon10greedyfb23.txt  epsilon10greedyfb24.txt  epsilon10greedyfb25.txt  epsilon10greedyfb26.txt  epsilon10greedyfb27.txt  epsilon10greedyfb28.txt  epsilon10greedyfb29.txt  epsilon10greedyfb3.txt  epsilon10greedyfb30.txt  epsilon10greedyfb31.txt  epsilon10greedyfb32.txt  epsilon10greedyfb33.txt  epsilon10greedyfb34.txt  epsilon10greedyfb35.txt  (+70 more)
(+17190 files in other folders)
